@@ -8,30 +8,30 @@
 # General Parameters
 # ==================
 
-server_ip       localhost
-server_path     /var/spool/pandora/data_in
-temporal        /var/spool/pandora/data_out
-logfile         /var/log/pandora/pandora_agent.log
+server_ip 	localhost
+server_path 	/var/spool/pandora/data_in
+temporal    	/var/spool/pandora/data_out
+logfile		/var/log/pandora/pandora_agent.log
 
 # Interval in seconds, 300 by default
-interval        300
+interval    	300
 
 # Debug mode only generate XML, and stop after first execution, 
 # and does not copy XML to server.
-debug           0
+debug 		0	
 
 # By default, agent takes machine name
 #agent_name     adama
 
 # By default agent try to take default encoding defined in host.
-# encoding      iso-8859-15
+# encoding 	iso-8859-15
 
 # Listening TCP port for remote server. By default is 41121 (for tentacle)
 # if you want to use SSH use 22, and FTP uses 21.
-server_port     41121
+server_port	41121
 
 # Transfer mode: tentacle, ftp, ssh or local 
-transfer_mode local
+transfer_mode tentacle
 
 # Server password (Tentacle or FTP). Leave empty for no password (default).
 # server_pwd mypassword
@@ -57,8 +57,22 @@ transfer_mode local
 # cron_mode 
 
 # If set to 1 allows the agent to be configured via the web console.
-remote_config 0
+# remote_config 0
 
+# Secondary server configuration
+# ==============================
+
+# If secondary_mode is set to on_error, data files are copied to the secondary
+# server only if the primary server fails. If set to always, data files are
+# always copied to the secondary server.
+# secondary_mode on_error
+# secondary_server_ip localhost
+# secondary_server_path /var/spool/pandora/data_in
+# secondary_server_port 41121
+# secondary_transfer_mode tentacle
+# secondary_server_pwd mypassword
+# secondary_server_ssl no
+# secondary_server_opts
 
 # Module Definition
 # =================
@@ -68,7 +82,6 @@ remote_config 0
 module_begin 
 module_name CPU (User)
 module_type generic_data
-module_interval 1
 module_exec iostat -C | tail -1 | awk '{ print $10 }'
 module_max 100
 module_min 0
