@@ -1,13 +1,13 @@
 #!/bin/bash
 # **********************************************************************
 # Pandora FMS Agent - Generic Host Agent Installer
-# GNU/Linux version
-# (c) 2007 Sancho Lerena <slerena@gmail.com>
+# Mac OS X version
+# (c) 2007-2008 Sancho Lerena <slerena@gmail.com>
 # Please see http://pandora.sourceforge.net
 # This code is licensed under GPL 2.0 license.
 # **********************************************************************
 
-PI_VERSION=1.0
+PI_VERSION=2.0
 PANDORA_BIN=/usr/bin/pandora_agent
 PANDORA_HOME=/usr/share/pandora_agent
 PANDORA_TEMP=/var/spool/pandora
@@ -42,28 +42,34 @@ install () {
         if [ -f $PANDORA_HOME ] && [ "$FORCE" = "0" ]
         then
                 echo "Seems that default dir already exists. Please use --force to"
-                echo "force installer to install on $PANDORA_HOME"
+                echo "force installer to overwrite $PANDORA_HOME"
                 exit
-        else
-                echo "Checking default dir $PANDORA_HOME..."
+        elif [ "$FORCE" = "1" ]
+		then
+				#Trying to create directories in case of upgrade
+				echo "Checking existing directories..."
+				mkdir $PANDORA_HOME 2> /dev/null
+				mkdir $PANDORA_TEMP 2> /dev/null
+				mkdir $PANDORA_TEMP/data_out 2> /dev/null
+				mkdir $PANDORA_CFG 2> /dev/null
+				mkdir /var/log/pandora 2> /dev/null
+		else
+                echo "Creating Pandora FMS Agent home directory at $PANDORA_HOME ..."
+				mkdir $PANDORA_HOME
+				mkdir $PANDORA_TEMP
+				mkdir $PANDORA_TEMP/data_out
+				mkdir $PANDORA_CFG
+				mkdir /var/log/pandora
         fi
 
         if [ -f $PANDORA_BIN ] && [ "$FORCE" = "0" ]
         then
                 echo "Seems that $PANDORA_BIN already exists. Please use --force to"
-                echo "force installer to reinstall overwriting it"
+                echo "force installer to overwrite it"
                 exit
         else
                 echo "Checking Pandora FMS Agent on $PANDORA_BIN...."
         fi
-
-        # Create directories
-        echo "Creating Pandora FMS Agent home directory at $PANDORA_HOME ..."
-        mkdir $PANDORA_HOME
-        mkdir $PANDORA_TEMP
-        mkdir $PANDORA_TEMP/data_out
-        mkdir $PANDORA_CFG
-	mkdir /var/log/pandora
 
         # Create logfile
         if [ ! -z "`touch $PANDORA_LOG`" ]
@@ -84,9 +90,15 @@ install () {
         cp pandora_agent_daemon $PANDORA_HOME
 
         echo "Copying Pandora FMS Agent configuration file to $PANDORA_HOME/pandora_agent.conf..."
-        cp pandora_agent.conf $PANDORA_HOME
-        chmod 600 $PANDORA_HOME/pandora_agent.conf
-
+        if [ -f $PANDORA_HOME/pandora_agent.conf ]
+		then
+			echo "Configuration file already exists. The new config will be in $PANDORA_HOME/pandora_agent.conf.new"
+			cp pandora_agent.conf $PANDORA_HOME/pandora_agent.conf.new
+		else
+			cp pandora_agent.conf $PANDORA_HOME
+			chmod 600 $PANDORA_HOME/pandora_agent.conf
+		fi
+		
         echo "Copying Pandora FMS Agent plugins to $PANDORA_HOME/plugins..."
         cp -r plugins $PANDORA_HOME
         chmod -R 700 $PANDORA_HOME/plugins
