@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
 	<key>Description</key>
-	<string>Pandora FMS Agent 1.3 (Mac)</string>
+	<string>Pandora FMS Agent 2.0 (Mac)</string>
 	<key>OrderPreference</key>
 	<string>None</string>
 	<key>Provides</key>
@@ -15,6 +15,5 @@
 		<string>Network</string>
 		<string>Resolver</string>
 	</array>
-	</dict>
+</dict>
 </plist>
-
