@@ -1,0 +1,1 @@
+This script can be used as a plugin in Pandora FMS. It will return an XML with the current status of an SGE cluster
